# RealTimeVideoPlayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/eltonwu/udplive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FramePacket.cpp  FramePacket.h  Rtsp.cpp  Rtsp.h  h264_sei.cpp  h264_stream.cpp  h264_stream.h  live555.cpp  log.h  mediacodec.cpp  mediacodec.h  native-lib.cpp  senderThread.cpp  senderThread.h  udp_test.cpp
app/src/main/cpp/include/live/UsageEnvironment/include/: UsageEnvironment.hh  UsageEnvironment_version.hh
app/src/main/cpp/include/live/liveMedia/include/: rtcp_from_spec.h
app/src/main/java/com/example/eltonwu/udplive/: GLFrameRenderer.java  GLFrameSurface.java  GLProgram.java  Live555.java  MainActivity.java  Player.java  UDPLive.java
app/src/main/java/com/example/eltonwu/udplive/gles/: OpenGlUtils.java  RenderProgram.java  Rotation.java  TextureRotationUtil.java  VideoRender.java
app/src/main/res/layout/: activity_main.xml  activity_media_test.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/eltonwu/udplive/: ExampleUnitTest.java
